--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "blogify-api",
   "version": "1.0.0",
-  "description": "The foundational backend setup for the Blogify API project.",
+  "description": "Blogify API Production Deployment",
   "main": "src/index.js",
   "type": "module",
-  "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+
+  "engines": {
+    "node": ">=18.0.0"
   },
+
+  "scripts": {
+    "start": "node src/index.js"
+  },
+
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.11"
   }
 }
